k3s-lab/optional-examples/mocks/netapp-mock/netapp-mock-certmanager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: checkmk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkmk
  namespace: checkmk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkmk
  template:
    metadata:
      labels:
        app: checkmk
    spec:
      containers:
        - name: checkmk
          image: checkmk/check-mk-ultimatemt:2.5.0b1
          ports:
            - containerPort: 5000
            - containerPort: 8000
          volumeMounts:
            - name: checkmk-data
              mountPath: /omd/sites
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: tmp
              mountPath: /opt/omd/sites/thanos/tmp
      volumes:
        - name: checkmk-data
          persistentVolumeClaim:
            claimName: checkmk-data
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: tmp
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: checkmk
  namespace: checkmk
spec:
  selector:
    app: checkmk
  ports:
    - name: http
      port: 80
      targetPort: 5000
    - name: livestatus
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkmk
  namespace: checkmk
  annotations:
    cert-manager.io/cluster-issuer: intermediate-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - checkmk.thanos
      secretName: checkmk-tls-secret
  rules:
    - host: checkmk.thanos
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkmk
                port:
                  number: 80
